{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 2,
  "lineage": "601c173f-e998-457c-c451-e02292770f4c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "access_for_kiran_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:security-group/sg-0144fd4ccc842fbbd",
            "description": "Security Group for all access from current IP for Dev / Test / Debugging",
            "filter": null,
            "id": "sg-0144fd4ccc842fbbd",
            "name": "access_for_kiran_sg",
            "tags": {
              "Name": "ssh_for_kiran_sg"
            },
            "vpc_id": "vpc-0343a657f63b9eb37"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "ctb_web_server_identifier_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:security-group/sg-02de23da54e2cf967",
            "description": "Security Group with no inbound rules",
            "filter": null,
            "id": "sg-02de23da54e2cf967",
            "name": "ctb_web_server_identifier_sg",
            "tags": {
              "Name": "ctb_web_server_identifier_sg"
            },
            "vpc_id": "vpc-0343a657f63b9eb37"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-068f2d849050e78c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/23",
            "default_for_az": false,
            "id": "subnet-068f2d849050e78c6",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_1"
            },
            "vpc_id": "vpc-0343a657f63b9eb37"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ctbamisetupserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0915bcb5fa77e4892",
            "arn": "arn:aws:ec2:us-east-1:058775512105:instance/i-0caece010423f19f1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0caece010423f19f1",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cloudtechbits_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0edcf9006250c958a",
            "private_dns": "ip-10-0-1-92.ec2.internal",
            "private_ip": "10.0.1.92",
            "public_dns": "ec2-18-209-166-244.compute-1.amazonaws.com",
            "public_ip": "18.209.166.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0274e8aad79148b7d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068f2d849050e78c6",
            "tags": {
              "Name": "Cloud Tech Bit AMI Set up server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0144fd4ccc842fbbd",
              "sg-02de23da54e2cf967"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon_linux_2",
            "data.aws_efs_file_system.ctb_efs",
            "data.aws_security_group.access_for_kiran_sg",
            "data.aws_security_group.ctb_web_server_identifier_sg",
            "data.aws_subnet.ctb_subnet_1"
          ]
        }
      ]
    }
  ]
}